Change more CSS layout and fixed problemx: Finally i can solve the probolem of the containers not filling up the remain space of his parents, but i got stuck on the Hero bug.

--- a/style.css
+++ b/style.css
@@ -22,16 +22,18 @@ button {
     max-width: 70px;
 }
 .hero{
-    align-content: space-around;
+    align-content: space-between;
     background-color: #1f2937;
-    height: 500px;
-    width:  900px;
+    padding: 0px 100px 100px 100px;
     flex: 1;
+    flex-flow: row wrap;
+    min-height: 600px
 }
 .Temp-logo{
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 700;
+    align-self: center;
 }
 .head, ul, .Temp-logo {
     display: flex;
@@ -47,10 +49,12 @@ button {
 .head, .top-con {
     background-color: #1f2937;
     color:white;
+    flex: 0 1 50%;
 }
 .top-con{
     justify-content: center;
     align-items: center;
+    align-self: flex-end;
 }
 .awesome-website{
     flex-flow: column wrap;
@@ -64,7 +68,7 @@ button {
 }
 #place-holder{
     background-color: #c0c1c3ba;
-    flex: 1 0 auto;
+    flex: 0 1 50%;
     align-self: stretch;
 }
 .top-con div{
@@ -89,6 +93,7 @@ button {
    flex-flow: row wrap;
     align-items: center;
     flex: 1 1 auto;
+    width: 100%;
 }
 .woobli-ilustration{
   flex-flow: row;
@@ -140,9 +145,10 @@ button {
     font-weight: 900;
 }
 .footer {
-    align-self: center;
+    align-items: center;
     justify-content: center;
     background-color: #1f2937;
     color: white;
-    flex: 1;
+    flex: 1 1 75px;
+    width: 100%;
 }
